fixed image modal in css and added br spacing to footer

--- a/styles.css
+++ b/styles.css
@@ -218,8 +218,8 @@
   }
   
   .modal-content {
-    max-width: 80%;
-    max-height: 80%;
+    max-width: 40%;
+    max-height: 40%;
     transform: scale(0);
     transition: transform 0.3s ease;
   }
